# poupy

./: .gitignore  CLAUDE.md  LICENSE  README.md  poupy.spec  pyproject.toml
docs/: PLAN.md  empacotamento.md  fixes.md
src/poupy/: __main__.py  config.py  models.py
src/poupy/db/: connection.py  migrations.py  repository.py
src/poupy/services/: gastos.py
src/poupy/ui/: categorias_dialog.py  format.py  gasto_dialog.py  graficos.py  main_window.py  novo_gasto_dialog.py  onboarding.py  style.qss  tema.py  theme_toggle.py
tests/: conftest.py  test_categorias.py  test_config.py  test_connection.py  test_format.py  test_graficos.py  test_migrations.py  test_navegacao.py  test_onboarding.py  test_repository.py  test_service.py  test_tema.py  test_ui.py
