[project]
name = "poupy"
version = "0.1.0"
description = "App desktop local-first de gastos pessoais"
readme = "README.md"
authors = [
    { name = "Vitor", email = "vgcrrzd@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.1",
]

[project.scripts]
poupy = "poupy.__main__:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]
cache_dir = ".cache/mypy"

[[tool.mypy.overrides]]
module = ["pyqtgraph.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = ".cache/pytest"
